--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
     <meta name="version_date" content="3-24-2024">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <title>Spaceflight Exploration</title>
-    <link rel="stylesheet" href="resources/css/home.css">
+    <link rel="stylesheet" href="resources/css/info.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
