--- a/info.html
+++ b/info.html
@@ -14,6 +14,9 @@
     <meta name="version" content="0.1.1">
     <meta name="version_date" content="3-24-2024">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+    <meta name="description" content="OmegaLink by sFlightX">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/sfs-bp-store.appspot.com/o/static%2Flogo%2FScreenshot_20240204-195015.jpg?alt=media&token=8d3ddf42-30c0-45c7-85a8-1f48974b15fa"/>
+    <meta property="og:url" content="sflightx.github.io/omegalink/info.html"/>
     <title>Spaceflight Exploration</title>
     <link rel="stylesheet" href="resources/css/info.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
