--- a/info.html
+++ b/info.html
@@ -56,29 +56,25 @@
         <div class="grid-container">
     <div class="grid-item">
         <h2>Low Latency Live Streaming</h2>
-        <p>We can provide ultra high speed livestreams of our launches.</p>
+        <p>OmegaSats can provide ultra high speed livestreams of our launches.</p>
     </div>
     <!-- Repeat for more grid items -->
     <!-- Another grid item -->
     <div class="grid-item">
         <h2>Help Starting Virtual Companies</h2>
         <p>You can also launch our OmegaSats to space! It's free and you can add this to your livestreams!</p>
-        <a href="#" class="see-more">See More <span>&rarr;</span></a>
     </div>
-    <!-- And so on... -->
     <div class="grid-item">
         <h2>Excitement Guaranteed</h2>
-        <p>Many companies are now launcing OmegaSats!</p>
+        <p>Many companies are now launcing OmegaSats! Be one them today!</p>
         </div>
     <div class="grid-item">
         <h2>Support Spaceflight Exploration</h2>
         <p>Any amount are very helpful to me and I appreciate it!</p>
-        <a href="#" class="see-more">See More <span>&rarr;</span></a>
     </div>
     <div class="grid-item">
         <h2>Book A Mission</h2>
         <p>Let us know your rocket launching into space using our OmegaSats. We will negotiate further. It is totally free! No hidden fees.</p>
-        <a href="https://spaceflightxploration.github.io/spaceflight-xploration/data/upload/share_mission.html" class="see-more">See More <span>&rarr;</span></a>
     </div>
 </div>
     </main>
