--- a/info.html
+++ b/info.html
@@ -19,7 +19,7 @@
 
     <title>Spaceflight Exploration</title>
     <link rel="stylesheet" href="resources/css/info.css">
-    <link rel="stylesheet" href="../resources/css/design.css">
+    <link rel="stylesheet" href="https://sflightx.github.io/resources/css/design.css">
 </head>
 
 <body>
