omegalink small patch

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         content="https://firebasestorage.googleapis.com/v0/b/sfs-bp-store.appspot.com/o/static%2Flogo%2FScreenshot_20240204-195015.jpg?alt=media&token=8d3ddf42-30c0-45c7-85a8-1f48974b15fa">
 
     <title>OmegaLink | sFlightX</title>
-    <link rel="stylesheet" href="../resources/main/import.css">
-    <link rel="stylesheet" href="../resources/main/secondary-layout.css">
-    <link rel="stylesheet" href="../resources/main/primary-layout.css">
+    <link rel="stylesheet" href="https://sflightx.com/resources/main/import.css">
+    <link rel="stylesheet" href="https://sflightx.com/resources/main/secondary-layout.css">
+    <link rel="stylesheet" href="https://sflightx.com/resources/main/primary-layout.css">
 </head>
 
 <body>
