--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
-    <script src="../resources/main/init.js"></script>
-    <script src="../resources/launches/retrieve.js"></script>
-    <script src="../resources/auth/authentication.js"></script>
+    <script src="https://sflightx.com/resources/main/init.js"></script>
+    <script src="https://sflightx.com/resources/launches/retrieve.js"></script>
+    <script src="https://sflightx.com/resources/auth/authentication.js"></script>
 </body>
 </html>
