--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             <div class="banner-div">
                 <h1 id="banner-title">Low Latency Live Streaming</h1>
                 <p id="subtext">OmegaSats can provide ultra high speed livestreams of our launches.</p>
-                <button onclick="window.location.href='https://sflightx.com/missions?id=sky-shield-reaction-mission';"><h4><b>Learn More</b></h4></button>
             </div>
         </div>
         <div class="banner" id="banner-info">
@@ -74,7 +73,6 @@
             <div class="banner-div">
                 <h1 id="banner-title">Help Starting Virtual Companies</h1>
                 <p id="subtext">You can also launch our OmegaSats to space! It's free and you can add this to your livestreams!</p>
-                <button onclick="window.location.href='https://sflightx.com/missions?id=sky-shield-reaction-mission';"><h4><b>Learn More</b></h4></button>
             </div>
         </div>
         <div class="banner" id="banner-info">
@@ -82,15 +80,15 @@
             <div class="banner-div">
                 <h1 id="banner-title">Excitement Guaranteed</h1>
                 <p id="subtext">Many companies are now launcing OmegaSats! Be one them today!</p>
-                <button onclick="window.location.href='https://sflightx.com/missions?id=sky-shield-reaction-mission';"><h4><b>Learn More</b></h4></button>
+                <button onclick="window.location.href='https://forms.gle/xexM6DfVhLi3WDQ97';"><h4><b>Learn More</b></h4></button>
             </div>
         </div>
         <div class="banner" id="banner-info">
             <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center." class="banner-img">
             <div class="banner-div">
                 <h1 id="banner-title">Support sFlightX</h1>
-                <p id="subtext">Any amount are very helpful to me and we appreciate it!</p>
-                <button onclick="window.location.href='https://sflightx.com/missions?id=sky-shield-reaction-mission';"><h4><b>Learn More</b></h4></button>
+                <p id="subtext">Subscribe to our YouTube channel to get launch updates.</p>
+                <button onclick="window.location.href='https://sflightx.com?link=youtube';"><h4><b>Learn More</b></h4></button>
             </div>
         </div>
         <div class="banner" id="banner-info">
@@ -98,7 +96,7 @@
             <div class="banner-div">
                 <h1 id="banner-title">Book a Contract!</h1>
                 <p id="subtext">Let us know your rocket launching into space using our OmegaSats. We will negotiate further. It is totally free! No hidden fees.</p>
-                <button onclick="window.location.href='https://sflightx.com/missions?id=sky-shield-reaction-mission';"><h4><b>Learn More</b></h4></button>
+                <button onclick="window.location.href='https://forms.gle/xexM6DfVhLi3WDQ97';"><h4><b>Learn More</b></h4></button>
             </div>
         </div>
     </main>
