--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="version" content="0.3">
@@ -18,109 +19,165 @@
         content="https://firebasestorage.googleapis.com/v0/b/sfs-bp-store.appspot.com/o/static%2Flogo%2FScreenshot_20240204-195015.jpg?alt=media&token=8d3ddf42-30c0-45c7-85a8-1f48974b15fa">
 
     <title>OmegaLink | sFlightX</title>
-    <link rel="stylesheet" href="https://sflightx.com/resources/main/import.css">
-    <link rel="stylesheet" href="https://sflightx.com/resources/main/secondary-layout.css">
-    <link rel="stylesheet" href="https://sflightx.com/resources/main/primary-layout.css">
+    <script type="importmap">
+    {
+      "imports": {
+        "@material/web/": "https://esm.run/@material/web/"
+      }
+    }
+    </script>
+    <script type="module">
+        import '@material/web/all.js';
+        import { styles as typescaleStyles } from '@material/web/typography/md-typescale-styles.js';
+        document.adoptedStyleSheets.push(typescaleStyles.styleSheet);
+    </script>
+    <style>
+        #cover {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            text-align: center;
+            height: 75vh;
+            background-image: url('https://sflightx.com/resources/static/athena/athena_cover.png');
+            background-size: cover;
+            background-position: center;
+            background-color: rgba(0, 0, 0, 0.75);
+            background-blend-mode: overlay;
+        }
+
+        #grid .container>*,
+        #info {
+            width: 100%;
+            text-align: center;
+        }
+
+        #grid {
+            text-align: center;
+        }
+        [desktop-gap] > * {
+            margin: 16px 0px;
+        }
+    </style>
+    <link rel="stylesheet" href="https://sflightx.com/resources/v4/element/material-dependency.css" />
+</head>
 </head>
 
 <body>
+    <div id="side-sheet">
+        <div id="side-sheet-header">
+            <h3 class="md-typescale-headline-small">SFlightX</h3>
+            <span class="material-symbols-rounded" onclick="toggleSideSheet()">close</span>
+        </div>
+        <nav id="navItems"></nav>
+    </div>
+    <div id="backdrop" class="fixed inset-0 bg-black bg-opacity-50 z-30 hidden" onclick="toggleSideSheet()"></div>
     <header>
-        <a href="https://sflightx.com"><img src="https://i.imgur.com/unbXdTh.png" alt="sFlightX Logo" ></a>
-        <ul id="nav_list">
-            <li><a href="https://sflightx.com/launches"><b>LAUNCHES</b></a><p></p></li>
-            <li><a href="https://sflightx.com/vehicle/maya"><b>MAYA</b></a><p></p></li>
-            <li><a href="https://sflightx.com/vehicle/maya-heavy"><b>MAYA HEAVY</b></a><p></p></li>
-            <li><a href="https://sflightx.com/vehicle/stellar"><b>STELLAR</b></a><p></p></li>
-            <li><a href="https://omegalink.sflightx.com/"><b>OMEGALINK</b></a><p></p></li>
-            <li><a href="https://sflightx.com/missions"><b>MISSIONS</b></a><p></p></li>
-        </ul>
-        <span class="material-symbols-outlined" id="menu">menu</span>
+        <div class="logo">
+            <span class="material-symbols-rounded" onclick="toggleSideSheet()" id="menu">menu</span>
+            <a href="https://sflightx.com">
+                <img src="https://sflightx.com/resources/v4/database/logo/logo.png" alt="sFlightX Logo" />
+            </a>
+        </div>
+        <div style="display: flex; gap: 1rem;">
+            <!--md-outlined-button href="https://auth.sflightx.com" style="margin: 8px 0px;"
+                class="md-typescale-title-small">Log In</md-outlined-button-->
+            <label><span class="material-symbols-rounded">dark_mode</span><md-switch
+                    id="themeToggle"></md-switch></label>
+        </div>
     </header>
     <main>
         <!-- Content of the main section -->
-        <div class="banner-full" style="background-image: url('https://i.imgur.com/YBF74SD.jpeg');">
-            <h1>OmegaLink</h1>
-            <p id="banner-title">OmegaLink is a sattelite constellation that provides low-latency communications from any point of Earth</p>
+        <div indent="all" id="cover">
+            <h1 class="md-typescale-display-large">OmegaLink</h1>
+            <p class="md-typescale-body-large">OmegaLink is a sattelite constellation that provides low-latency
+                communications from any point of Earth.</p>
         </div>
-        <div class="banner-stat">
-            <h1>OmegaLink Statistics</h1>
-            <h6>Data as of April 26, 2024</h6>
-            <div class="banner-stat-container">
-                <div class="banner-stat-child"><p>203</p><h2>OmegaSats Launched</h2></div>
-                <div class="banner-stat-child"><p>2</p><h2>OmegaSats Decommisioned</h2></div>
-                <div class="banner-stat-child"><p>201</p><h2>OmegaSats Operational</h2></div>
-                <div class="banner-stat-child"><p>2</p><h2>Total Landings</h2></div>  
+        <div id="grid" stat>
+            <div class="container" indent="all" transparent>
+                <h1 class="md-typescale-display-large">250</h1>
+                <h4 class="md-typescale-title-large">OmegaSats Launched</h4>
+            </div>
+            <div class="container" indent="all" transparent>
+                <h1 class="md-typescale-display-large">1</h1>
+                <h4 class="md-typescale-title-large">OmegaSats Decommisioned</h4>
+            </div>
+            <div class="container" indent="all" transparent>
+                <h1 class="md-typescale-display-large">14</h1>
+                <h4 class="md-typescale-title-large">OmegaSats Operational</h4>
+            </div>
+            <div class="container" indent="all" transparent>
+                <h1 class="md-typescale-display-large">2</h1>
+                <h4 class="md-typescale-title-large">Total Landings</h4>
             </div>
         </div>
-        <div id="launches" class="banner-stat">
+        <div desktop-gap>
+            <div class="container" shape="rounded" indent="all">
+                <h4 class="md-typescale-body-large" indent="all">Data as of June 13, 2025</h4>
+            </div>
+            <div class="container" indent="all" shape="rounded">
+                <img src="https://sflightx.com/resources/v4/database/image/sflightx_com/qS1262v.png" alt="Maya Liftoff">
+                <div id="info">
+                    <h4 class="md-typescale-headline-large">Book a Contract!</h4>
+                    <p class="md-typescale-body-medium" indent="vertical">Let us know your rocket launching into space
+                        using our OmegaSats. We will negotiate
+                        further. It is totally free! No hidden fees.</p>
+                    <md-filled-button href="https://forms.gle/xexM6DfVhLi3WDQ97" target="_blank">Learn
+                        More</md-filled-button>
+                </div>
+            </div>
+        </div>
+        <!--div id="launches" class="banner-stat">
             <h1> Upcoming Launches</h1>
             <div id="scroll-grid" class="grid-container"></div>
         </div>
-        
+
         <div id="data-container" class="data-container">
-            <!-- Data items will be appended here -->
         </div>
-        
+
         <div class="banner" id="banner-info">
-            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center." class="banner-img">
+            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center."
+                class="banner-img">
             <div class="banner-div">
                 <h1 id="banner-title">Low Latency Live Streaming</h1>
                 <p id="subtext">OmegaSats can provide ultra high speed livestreams of our launches.</p>
             </div>
         </div>
         <div class="banner" id="banner-info">
-            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center." class="banner-img">
+            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center."
+                class="banner-img">
             <div class="banner-div">
                 <h1 id="banner-title">Help Starting Virtual Companies</h1>
-                <p id="subtext">You can also launch our OmegaSats to space! It's free and you can add this to your livestreams!</p>
+                <p id="subtext">You can also launch our OmegaSats to space! It's free and you can add this to your
+                    livestreams!</p>
             </div>
         </div>
         <div class="banner" id="banner-info">
-            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center." class="banner-img">
+            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center."
+                class="banner-img">
             <div class="banner-div">
                 <h1 id="banner-title">Excitement Guaranteed</h1>
                 <p id="subtext">Many companies are now launcing OmegaSats! Be one them today!</p>
-                <button onclick="window.location.href='https://forms.gle/xexM6DfVhLi3WDQ97';"><h4><b>Learn More</b></h4></button>
+                <button onclick="window.location.href='https://forms.gle/xexM6DfVhLi3WDQ97';">
+                    <h4><b>Learn More</b></h4>
+                </button>
             </div>
         </div>
         <div class="banner" id="banner-info">
-            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center." class="banner-img">
+            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center."
+                class="banner-img">
             <div class="banner-div">
                 <h1 id="banner-title">Support sFlightX</h1>
                 <p id="subtext">Subscribe to our YouTube channel to get launch updates.</p>
-                <button onclick="window.location.href='https://sflightx.com?link=youtube';"><h4><b>Learn More</b></h4></button>
+                <button onclick="window.location.href='https://sflightx.com?link=youtube';">
+                    <h4><b>Learn More</b></h4>
+                </button>
             </div>
-        </div>
-        <div class="banner" id="banner-info">
-            <img src="https://i.imgur.com/86aRvan.png" alt="Launch Complex C, at Bataan Space Center." class="banner-img">
-            <div class="banner-div">
-                <h1 id="banner-title">Book a Contract!</h1>
-                <p id="subtext">Let us know your rocket launching into space using our OmegaSats. We will negotiate further. It is totally free! No hidden fees.</p>
-                <button onclick="window.location.href='https://forms.gle/xexM6DfVhLi3WDQ97';"><h4><b>Learn More</b></h4></button>
-            </div>
-        </div>
+        </div-->
+        <sflightx-footer></sflightx-footer>
     </main>
-    <footer id="footer">
-        <div>
-            <p>© 2021-2024 Spaceflight Exploration</p>
-            <p><a href="https://sflightx.com/legal/terms.html">Terms of Use</a> | <a href="https://sflightx.com/legal/privacy_policy.html">Privacy Policy</a></p>
-        </div>
-        <div id="footer-link">
-            <a href="https://x.com/SFlightXJNO"><img src="https://img.icons8.com/?size=100&id=Q33YQBzI2lZs&format=png&color=FFFFFF" class="footer-link-img"></a>
-            <a href="https://youtube.com/@sflightx"><img src="https://img.icons8.com/?size=100&id=85162&format=png&color=FFFFFF" class="footer-link-img"></a>
-            <a href="https://facebook.com/sflightx"><img src="https://img.icons8.com/?size=100&id=85126&format=png&color=FFFFFF" class="footer-link-img"></a>
-            <a href="https://bsky.app/profile/sflightx.com"><img src="https://img.icons8.com/?size=100&id=MGqlXOe8ksH0&format=png&color=FFFFFF" class="footer-link-img"></a>
-            <a href="https://simplerockets.com/u/sflightx"><img src="https://img.icons8.com/?size=100&id=COgXDnufRVRP&format=png&color=FFFFFF" class="footer-link-img"></a>
-        </div>
-    </footer>
-
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
-    <script src="https://sflightx.com/resources/main/init.js"></script>
-    <script src="https://sflightx.com/resources/launches/retrieve.js"></script>
-    <script src="https://sflightx.com/resources/auth/authentication.js"></script>
+    <script src="https://sflightx.com/resources/v4/dependency.js"></script>
+    <script src="https://sflightx.com/resources/v4/data/drawer/primary.js"></script>
 </body>
+
 </html>
